add g1 gc test