@@ -12,17 +12,27 @@ import java.util.List;
  *       -XX:InitiatingHeapOccupancyPercent=40 -XX:MaxGCPauseMillis=200
  *       -XX:ConcGCThreads=4 -XX:ParallelGCThreads=8
  *       -XX:G1HeapRegionSize=1m -Xms10M -Xmx10M -Xmn4M
+ *       -XX:+PrintAdaptiveSizePolicy
+ *       -XX:+UnlockDiagnosticVMOptions -XX:+G1PrintHeapRegions -XX:+G1PrintRegionLivenessInfo
+ *       -XX:+PrintHeapAtGC
+ *       -XX:+PrintTLAB -XX:+Verbose
+ *       -XX:+PrintGCDetails -XX:+PrintGCTimeStamps
  */
 public class TestG1MixGC {
 
     private static final List<BigObject> LISTS = new ArrayList<>(100);
 
     public static void main(String[] args) throws Exception {
-        for (int i = 0; i < 32; i++) {
+        //-Xmx会变成16M
+        for (int i = 0; i < 55; i++) {
             if ( i == 14) {
                 System.out.println("gc point");
             }
             LISTS.add(new BigObject());
+            if ( i == 38) {
+                // wait for con mark finish
+                Thread.sleep(100L);
+            }
         }
 
         System.out.println("done");
